@@ -6,12 +6,12 @@ import com.datahub.authorization.AuthUtil;
 import com.datahub.authorization.AuthorizerChain;
 import com.datahub.authorization.ConjunctivePrivilegeGroup;
 import com.datahub.authorization.DisjunctivePrivilegeGroup;
-import com.linkedin.metadata.timeseries.TimeseriesAspectService;
-import com.linkedin.timeseries.TimeseriesIndexSizeResult;
-import io.datahubproject.openapi.util.ElasticsearchUtils;
 import com.google.common.collect.ImmutableList;
 import com.linkedin.metadata.authorization.PoliciesConfig;
 import com.linkedin.metadata.systemmetadata.SystemMetadataService;
+import com.linkedin.metadata.timeseries.TimeseriesAspectService;
+import com.linkedin.timeseries.TimeseriesIndexSizeResult;
+import io.datahubproject.openapi.util.ElasticsearchUtils;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -46,6 +46,7 @@ public class OperationsController {
   @Autowired
   @Qualifier("elasticSearchSystemMetadataService")
   private SystemMetadataService _systemMetadataService;
+
   @Autowired
   @Qualifier("timeseriesAspectService")
   private TimeseriesAspectService _timeseriesAspectService;
@@ -102,22 +103,31 @@ public class OperationsController {
   public ResponseEntity<String> getIndexSizes() {
     Authentication authentication = AuthenticationContext.getAuthentication();
     String actorUrnStr = authentication.getActor().toUrnStr();
-    DisjunctivePrivilegeGroup orGroup = new DisjunctivePrivilegeGroup(ImmutableList.of(new ConjunctivePrivilegeGroup(
-        ImmutableList.of(PoliciesConfig.GET_TIMESERIES_INDEX_SIZES_PRIVILEGE.getType())
-    )));
-    if (restApiAuthorizationEnabled && !AuthUtil.isAuthorizedForResources(_authorizerChain, actorUrnStr, List.of(java.util.Optional.empty()), orGroup)) {
-      return ResponseEntity.status(HttpStatus.FORBIDDEN).body(
-          String.format(actorUrnStr + " is not authorized to get timeseries index sizes"));
+    DisjunctivePrivilegeGroup orGroup =
+        new DisjunctivePrivilegeGroup(
+            ImmutableList.of(
+                new ConjunctivePrivilegeGroup(
+                    ImmutableList.of(
+                        PoliciesConfig.GET_TIMESERIES_INDEX_SIZES_PRIVILEGE.getType()))));
+    if (restApiAuthorizationEnabled
+        && !AuthUtil.isAuthorizedForResources(
+            _authorizerChain, actorUrnStr, List.of(java.util.Optional.empty()), orGroup)) {
+      return ResponseEntity.status(HttpStatus.FORBIDDEN)
+          .body(String.format(actorUrnStr + " is not authorized to get timeseries index sizes"));
     }
     List<TimeseriesIndexSizeResult> indexSizeResults = _timeseriesAspectService.getIndexSizes();
     JSONObject j = new JSONObject();
-    j.put("sizes",
-        indexSizeResults.stream().map(timeseriesIndexSizeResult -> new JSONObject()
-            .put("aspectName", timeseriesIndexSizeResult.getAspectName())
-            .put("entityName", timeseriesIndexSizeResult.getEntityName())
-            .put("indexName", timeseriesIndexSizeResult.getIndexName())
-            .put("sizeMb", timeseriesIndexSizeResult.getSizeInMb())).collect(Collectors.toList()));
+    j.put(
+        "sizes",
+        indexSizeResults.stream()
+            .map(
+                timeseriesIndexSizeResult ->
+                    new JSONObject()
+                        .put("aspectName", timeseriesIndexSizeResult.getAspectName())
+                        .put("entityName", timeseriesIndexSizeResult.getEntityName())
+                        .put("indexName", timeseriesIndexSizeResult.getIndexName())
+                        .put("sizeMb", timeseriesIndexSizeResult.getSizeInMb()))
+            .collect(Collectors.toList()));
     return ResponseEntity.ok(j.toString());
   }
 }
-
